# wiki-knowledge-base

./:  .editorconfig  .editorconfig  .gitattributes  .gitignore  .prettierignore  .ruff.toml  Makefile  README.md  bashrc  pycharm
asmo.d/: Makefile
asmo.d/dc/: .env.example  Makefile  docker-compose.mk  docker-compose.yml
asmo.d/sites/: pure_html.example
asmo.d/utils/: Makefile
bittensor/: Makefile  history_dojo_test_98.txt  requirements.txt
bittensor-731/: Makefile  history_dojo_test_98.txt
bittensor-latest/: Makefile  balance.py
bonus.d/: Makefile
bonus.d/utils.d/: add_file_path_comment.py  build_tree.sh  generate_prompt.sh
dc.d/: .env.example  Makefile  docker-compose.yaml
dc.d/wiki.d/: generate_howto_deploy.py  howto.init_poetry.txt
docker/: Makefile  docker.mk
fastapi_template/: setup_project.sh
git/: git_config.txt
github/clone_all_organization_projects/: .env.example  clone_all_organization_projects.py  env_variables.py  github_token.txt
gitlab/clone_all_group_projects/: .env  .env.example  clone_all_group_projects.py  env_variables.py  howto.gitlab_access_token.txt  howto.gitlab_group_id.txt  requirements.txt
linux/: bashrc
project/: generate_howto_deploy.py
python/: generate_password.py
python_project_template/: Dockerfile  init_project_in_new_dir_cmd.txt  pyproject.toml
python_project_template/src/app/: __init__.py
ssh/: config  howto.generate_ssh.txt
telegram/: telegram.mk
telegrambot/: howto.read_using_browser.txt
ubuntu/: new_server_setup.txt
windows/autoHotKey/: caps_as_alt_shift.ahk  left_alt_as_ctrl.ahk
(+14 files in other folders)
